# heat24

./: .gitignore  CRUSH.md  Makefile  README.md  annual_heat_index.py  last_week_heat_index.py  main.py  month_heat_index.py  pyproject.toml
