[project]
name = "heat24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openmeteo-requests>=1.7.1",
    "pandas>=2.3.2",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
]
